syntax = "proto3";

option csharp_namespace = "ArticleService.Rpc.Protos";

package sunnyblog;
import "google/protobuf/empty.proto";


service gArticle{
	//根据ID获取文章信息
	rpc GetArticleInfo(ArticleId) returns(ArticleInfo);
	//获取文章列表
	rpc GetArticleList(google.protobuf.Empty) returns(ArticleInfoList);
}

message ArticleId{
	int32 Id = 1;
}

message ArticleInfo{
	int32 Id=1;
	string Title=2;
	int32 Status=3;
	int32 CommentStatus=4;
	int32 IsLock=5;
	int32 UserId=6;
}

message ArticleInfoList{
	repeated ArticleInfo infos=1;
}



